--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+glob = "0.3"
+ignore = "0.4"
 walkdir = "2.4"
 tokio = { version = "1.36", features = ["full"] }
 
