--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ clap = { version = "4.5", features = ["derive"] }
 
 async-trait = "0.1"
 dotenv = "0.15"
+
+# Date and time handling
+chrono = { version = "0.4", features = ["serde"] }
