Add tests for explorer.rs
Fixes applying "patches"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ dotenv = "0.15"
 
 # Date and time handling
 chrono = { version = "0.4", features = ["serde"] }
+
+[dev-dependencies]
+tempfile = "3.10"
