--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ walkdir = "2.4"
 tokio = { version = "1.36", features = ["full"] }
 
 # HTTP Requests
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
 futures = "0.3"
 
 # WebSocket Support
@@ -40,4 +40,5 @@ chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.10"
-mockito = "1.2"
+axum = "0.7"
+bytes = "1.5"
