--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ clap = { version = "4.5", features = ["derive"] }
 
 async-trait = "0.1"
 dotenv = "0.15"
+dirs = "5.0"
 
 # Date and time handling
 chrono = { version = "0.4", features = ["serde"] }
