--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,15 @@ glob = "0.3"
 ignore = "0.4"
 walkdir = "2.4"
 tokio = { version = "1.36", features = ["full"] }
+tempfile = "3.10"
 
 # HTTP Requests
+chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
 reqwest = { version = "0.11", features = ["json", "stream"] }
 futures = "0.3"
+percent-encoding = "2.3"
+scraper = "0.18"
+url = "2.5"
 
 # WebSocket Support
 tokio-tungstenite = "0.24"
@@ -40,6 +45,5 @@ dirs = "5.0"
 chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
-tempfile = "3.10"
 axum = "0.7"
 bytes = "1.5"
