--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures = "0.3"
 percent-encoding = "2.3"
 scraper = "0.18"
 url = "2.5"
+htmd = "0.1.6"
 
 # WebSocket Support
 tokio-tungstenite = "0.24"
