--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PUSH_TOKEN }}
 
       - name: Set up Git
         run: |
@@ -73,10 +75,7 @@ jobs:
         run: |
           git add Cargo.toml
           git commit -m "Bump version to ${{ steps.release_version.outputs.new_version }}"
-
-          # Method 1: Using PAT directly with git command
-          echo "Using PAT for pushing changes"
-          git push https://stippi:${{ secrets.GH_PUSH_TOKEN }}@github.com/${{ github.repository }}.git main
+          git push main
 
       - name: Create Release
         id: create_release
