--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # File content inspection
 content_inspector = "0.2"
+encoding_rs = "0.8.35"
 
 [dev-dependencies]
 axum = "0.7"
