--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ tempfile = "3.10"
 rustyline = "12.0.0"
 crossterm = "0.27.0"
 
+# GUI - specify rev to avoid dependency conflicts
+gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
+smallvec = "1.10"
+
 # HTTP Requests
 chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
 reqwest = { version = "0.11", features = ["json", "stream"] }
