Use sub elements in MessageContainer
Refactor the UI code into a new sub module.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ chrono = { version = "0.4", features = ["serde"] }
 content_inspector = "0.2"
 encoding_rs = "0.8.35"
 unicode-segmentation = "1.12.0"
+rand = "0.8.5"
 
 [dev-dependencies]
 axum = "0.7"
