--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ tempfile = "3.18"
 rustyline = "12.0.0"
 crossterm = "0.27.0"
 
-# GUI - specify rev to avoid dependency conflicts
-gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
+gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui", rev = "f3f97895a93681ca0e27195ecb1b0fdd21e01042" } # GUI - specify rev to avoid dependency conflicts
 smallvec = "1.14"
 
 # HTTP Requests
