--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 llm = { path = "../llm" }
+web = { path = "../web" }
+
 glob = "0.3"
 ignore = "0.4"
 walkdir = "2.5"
+percent-encoding = "2.3"
 tokio = { version = "1.44", features = ["full"] }
 tempfile = "3.18"
 
@@ -19,20 +22,6 @@ crossterm = "0.27.0"
 gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui", rev = "f3f97895a93681ca0e27195ecb1b0fdd21e01042" } # GUI - specify rev to avoid dependency conflicts
 smallvec = "1.14"
 rust-embed = { version = "8.4", features = ["include-exclude"] }
-
-# HTTP Requests
-chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
-reqwest = { version = "0.11", features = ["json", "stream"] }
-futures = "0.3"
-percent-encoding = "2.3"
-scraper = "0.18"
-url = "2.5"
-htmd = "0.1.6"
-oauth2 = "4.4"
-base64 = "0.21"
-
-# WebSocket Support
-tokio-tungstenite = "0.24"
 
 # JSON (de)serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -53,7 +42,6 @@ clap = { version = "4.5", features = ["derive"] }
 async-trait = "0.1"
 dotenv = "0.15"
 dirs = "5.0"
-keyring = "2.3"
 
 # Date and time handling
 chrono = { version = "0.4", features = ["serde"] }
