--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -56,6 +56,7 @@ rand = "0.8.5"
 
 # Diff visualization
 similar = { version = "2.5.0", features = ["inline"] }
+async-channel = "2.3.1"
 
 [dev-dependencies]
 axum = "0.7"
