--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             libx11-dev \
+            libx11-xcb-dev \
             libxcb1-dev \
             libxcb-shape0-dev \
             libxcb-xfixes0-dev \
