--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ["crates/code_assistant", "crates/llm"]
+members = ["crates/code_assistant", "crates/llm", "crates/web"]
 
 resolver = "2"
