--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -61,6 +61,9 @@ async-channel = "2.3.1"
 # Base64 encoding for images
 base64 = "0.22"
 
+# Image processing
+image = "0.25"
+
 [dev-dependencies]
 axum = "0.7"
 bytes = "1.10"
