--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -63,6 +63,8 @@ base64 = "0.22"
 
 # Image processing
 image = "0.25"
+ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
+tui-textarea = "0.7.0"
 
 [dev-dependencies]
 axum = "0.7"
