--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -17,6 +17,7 @@ tempfile = "3.18"
 # Terminal UI
 rustyline = "12.0.0"
 crossterm = "0.27.0"
+unicode-width = "0.1"
 
 # GPUI related
 gpui = { git = "https://github.com/zed-industries/zed.git" }
@@ -63,8 +64,6 @@ base64 = "0.22"
 
 # Image processing
 image = "0.25"
-ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
-tui-textarea = "0.7.0"
 
 [dev-dependencies]
 axum = "0.7"
