--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -17,6 +17,10 @@ tempfile = "3.18"
 # Terminal UI
 rustyline = "12.0.0"
 crossterm = "0.27.0"
+unicode-width = "0.1"
+ratatui = "0.29"
+tui-textarea = "0.7"
+tui-markdown = "0.3.5"
 
 # GPUI related
 gpui = { git = "https://github.com/zed-industries/zed.git" }
