--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -68,6 +68,10 @@ base64 = "0.22"
 # Image processing
 image = "0.25"
 
+# Agent Client Protocol
+agent-client-protocol = "0.1"
+tokio-util = { version = "0.7", features = ["compat"] }
+
 [dev-dependencies]
 axum = "0.7"
 bytes = "1.10"
