--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -70,7 +70,7 @@ base64 = "0.22"
 image = "0.25"
 
 # Agent Client Protocol
-agent-client-protocol = "0.4"
+agent-client-protocol = { version = "0.4", features = ["unstable"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 
 [dev-dependencies]
