Update workflows to use "--locked" flag with cargo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -218,7 +218,7 @@ jobs:
           PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
         with:
           command: build
-          args: --release --target ${{ matrix.target }}
+          args: --locked --release --target ${{ matrix.target }}
 
       - name: Package Binary
         shell: bash
