--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
       #     sudo apt-get install -y libxcb1-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libxkbcommon-x11-dev libx11-dev
       - name: Check formatting
         run: cargo fmt --all -- --check
-      # - name: Lint
-      #   run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Lint
+        run: cargo clippy --locked --all-targets --all-features -- -D warnings
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --locked --verbose
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --locked --verbose
