--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 llm = { path = "../llm" }
 web = { path = "../web" }
+command_executor = { path = "../command_executor" }
+fs_explorer = { path = "../fs_explorer" }
+sandbox = { path = "../sandbox" }
 
 glob = "0.3"
 ignore = "0.4"
@@ -54,8 +57,6 @@ shell-words = "1.1"
 chrono = { version = "0.4", features = ["serde"] }
 
 # File content inspection
-content_inspector = "0.2"
-encoding_rs = "0.8.35"
 unicode-segmentation = "1.12.0"
 rand = "0.8.5"
 
