--- a/crates/command_executor/Cargo.toml
+++ b/crates/command_executor/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 anyhow = "1.0.95"
 async-trait = "0.1.85"
 tokio = { version = "1.40.0", features = ["macros", "process", "io-util"] }
+sandbox = { path = "../sandbox" }
+tracing = "0.1"
