--- a/crates/fs_explorer/Cargo.toml
+++ b/crates/fs_explorer/Cargo.toml
@@ -14,6 +14,7 @@ ignore = "0.4.23"
 regex = "1.11.1"
 serde = { version = "1.0.215", features = ["derive"] }
 tracing = "0.1.40"
+path-clean = "1.0.1"
 
 [dev-dependencies]
 tempfile = "3.13.0"
