Add a new claude specific prompt, written by Opus

--- a/crates/code_assistant/resources/system_prompts/mapping.json
+++ b/crates/code_assistant/resources/system_prompts/mapping.json
@@ -2,6 +2,12 @@
   "default_prompt": "default.md",
   "prompts": [
     {
+      "file": "claude.md",
+      "model_substrings": [
+        "claude"
+      ]
+    },
+    {
       "file": "codex.md",
       "model_substrings": [
         "codex"
