--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -15,6 +15,7 @@ ignore = "0.4"
 walkdir = "2.5"
 percent-encoding = "2.3"
 tokio = { version = "1.48", features = ["full"] }
+futures = "0.3"
 tempfile = "3.23"
 
 # Terminal UI
