fix: make core-text dependency macOS-only for Linux build support

--- a/crates/code_assistant/Cargo.toml
+++ b/crates/code_assistant/Cargo.toml
@@ -30,9 +30,6 @@ tui-markdown = "=0.3.6"
 # GPUI related
 gpui = "0.2.2"
 gpui-component = "0.4.0"
-# Pin core-text to avoid version conflict with zed-font-kit
-# See: https://github.com/zed-industries/zed/issues/46966
-core-text = "=21.0.0"
 smallvec = "1.15"
 rust-embed = { version = "8.9", features = ["include-exclude"] }
 
@@ -77,6 +74,11 @@ image = "0.25"
 # Agent Client Protocol
 agent-client-protocol = { version = "0.9", features = ["unstable"] }
 tokio-util = { version = "0.7", features = ["compat"] }
+
+# Pin core-text on macOS to avoid version conflict with zed-font-kit
+# See: https://github.com/zed-industries/zed/issues/46966
+[target.'cfg(target_os = "macos")'.dependencies]
+core-text = "=21.0.0"
 
 [dev-dependencies]
 axum = "0.7"
